k8s-2/app.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: identity-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
      - name: identity
        image: gcr.io/id-test-deploy-2/identityserver:v2
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
  labels:
    app: identity
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    name: identity-port
  selector:
    app: identity
